<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:minHeight="140dp"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".main_activity_files.MyPets.PetDetailsActivityFiles.DiagnosisFragmentFiles.DeleteDiagnosisActivity">

    <TextView
        android:id="@+id/removing_info_TW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="35dp"
        android:background="#8EC5AD"
        android:text="@string/diagnosis_detail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/name_diagnosis"
        />
    <TextView
        android:id="@+id/name_deleting_diagnosis"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/type_deleting_diagnosis_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/type_diagnosis"
        />

    <TextView
        android:id="@+id/type_deleting_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"

        />
    <TextView
        android:id="@+id/date_deleting_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_diagnosis"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        />



        <TextView
            android:id="@+id/date_deleting_diagnosis_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:textSize="25dp"
            android:text="@string/date_format"
            android:textAlignment="center" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/description_diagnosis"
        />
    <TextView
        android:id="@+id/description_deleting_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"
        />
    <Button
        android:id="@+id/btn_delete_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:padding="15dp"
        android:text="@string/remove"
        />
</LinearLayout>