<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".main_activity_files.MyPets.PetDetailsActivityFiles.DiagnosisFragmentFiles.AddNewDiagnosisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/name_diagnosis"
            />
        <EditText
            android:id="@+id/name_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/type_diagnosis_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/type_diagnosis"
            />

        <Spinner
            android:id="@+id/type_diagnosis_spinner"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom= "@+id/type_diagnosis_info"

            />
        <TextView
            android:id="@+id/date_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_diagnosis"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/date_diagnosis_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/date_format"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/image_view_open_close_calendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_baseline_arrow_downward_24" />

        </RelativeLayout>
        <CalendarView
            android:id="@+id/calendar_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/description_diagnosis"
            />
        <EditText
            android:id="@+id/description_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_save_new_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />

    </LinearLayout>

</ScrollView>