<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Authorization.Registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"

        >


        <EditText
            android:id="@+id/authorization_login_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:background="@drawable/border_1"
            android:hint="@string/email"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/authorization_password_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />
            <ImageView
                android:id="@+id/eye_showing_password"
                android:layout_marginTop="17dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_remove_default_eye_24"
                />



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/authorization_repeat_password_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/border_1"
                android:hint="@string/repeat_password"
                />

            <ImageView
                android:id="@+id/eye_showing_repeat_password"
                android:layout_marginTop="17dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_remove_default_eye_24"
                />



        </RelativeLayout>

        <EditText
            android:id="@+id/authorization_name_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:background="@drawable/border_1"
            android:hint="@string/name"
            />
        <EditText
            android:id="@+id/authorization_age_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:background="@drawable/border_1"
            android:hint="@string/age"
            />

        <Button
            android:id="@+id/btn_register_registration"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/register"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            />
        <TextView
            android:id="@+id/btn_back_to_login_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#25875C"
            android:text="@string/return_to_login"
            />

    </LinearLayout>



</ScrollView>